--- a/index.html
+++ b/index.html
@@ -1,56 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Spotify Playlist Embed</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Spotify Playlist</title>
   <style>
+    :root {
+      --spotify-green: #1DB954;
+      --bg-color: #f4f4f4;
+      --text-color: #222;
+    }
+
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
       margin: 0;
-      padding: 0;
+      padding: 1rem;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: var(--bg-color);
+      color: var(--text-color);
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      height: 100vh;
-      text-align: center;
+      min-height: 100vh;
+      box-sizing: border-box;
     }
 
     h1 {
-      color: #1DB954;
-      margin-bottom: 20px;
+      color: var(--spotify-green);
+      font-size: 1.8rem;
+      margin-bottom: 1.5rem;
+      text-align: center;
     }
 
     .spotify-embed-container {
-      width: 100%;
-      max-width: 800px; /* Set a max width for larger screens */
-      height: 0;
-      padding-bottom: 56.25%; /* Aspect ratio for 16:9 (use 56.25% for a 16:9 ratio) */
       position: relative;
+      width: 100%;
+      max-width: 600px;
+      aspect-ratio: 16 / 9;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+      border-radius: 12px;
       overflow: hidden;
     }
 
-    .spotify-embed-container iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
+    iframe {
       width: 100%;
       height: 100%;
+      border: none;
       border-radius: 12px;
+    }
+
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 1.4rem;
+        margin-bottom: 1rem;
+      }
+
+      .spotify-embed-container {
+        max-width: 100%;
+      }
     }
   </style>
 </head>
 <body>
 
-  <h1>Spotify Playlist</h1>
+  <h1>My Spotify Playlist</h1>
 
   <div class="spotify-embed-container">
-    <iframe src="https://open.spotify.com/embed/playlist/09Ef3iMyrNe6E58xflO6Xx?utm_source=generator" 
-            frameBorder="0" 
-            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
-            loading="lazy"></iframe>
+    <iframe 
+      src="https://open.spotify.com/embed/playlist/09Ef3iMyrNe6E58xflO6Xx?utm_source=generator" 
+      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+      loading="lazy"
+      title="Spotify Playlist"></iframe>
   </div>
 
 </body>
