--- a/index.html
+++ b/index.html
@@ -7,56 +7,48 @@
   <style>
     :root {
       --spotify-green: #1DB954;
-      --bg-color: #f4f4f4;
-      --text-color: #222;
+      --bg-color: #ffffff;
+      --text-color: #000000;
+    }
+
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
     }
 
     body {
-      margin: 0;
-      padding: 1rem;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: var(--bg-color);
       color: var(--text-color);
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: flex-start;
+      padding: 1rem;
       min-height: 100vh;
-      box-sizing: border-box;
     }
 
     h1 {
       color: var(--spotify-green);
-      font-size: 1.8rem;
-      margin-bottom: 1.5rem;
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
       text-align: center;
     }
 
     .spotify-embed-container {
-      position: relative;
       width: 100%;
-      max-width: 600px;
+      max-width: 100%;
       aspect-ratio: 16 / 9;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
       border-radius: 12px;
       overflow: hidden;
+      box-shadow: 0 2px 12px rgba(0, 0, 0, 0.1);
     }
 
     iframe {
       width: 100%;
       height: 100%;
       border: none;
-      border-radius: 12px;
-    }
-
-    @media (max-width: 480px) {
-      h1 {
-        font-size: 1.4rem;
-        margin-bottom: 1rem;
-      }
-
-      .spotify-embed-container {
-        max-width: 100%;
-      }
     }
   </style>
 </head>
